[gd_scene load_steps=12 format=3 uid="uid://b5s4pub7glhjy"]

[ext_resource type="Script" uid="uid://bav1fxu4d18cd" path="res://User/menu_save_load.gd" id="1_kn8vx"]
[ext_resource type="Texture2D" uid="uid://bnnl78w0vlwf1" path="res://Sprout Lands - Sprites - Basic pack/Objects/clouds.jpeg" id="2_uuvnn"]
[ext_resource type="Script" uid="uid://dy6w40p6d03uh" path="res://User/scroll_container.gd" id="3_ohrbk"]
[ext_resource type="PackedScene" uid="uid://unhb7pius38k" path="res://Tabs/card_bank.tscn" id="4_ohrbk"]
[ext_resource type="PackedScene" uid="uid://bvx4h074stip4" path="res://Scene/skill_tree.tscn" id="4_op81h"]
[ext_resource type="PackedScene" uid="uid://bgc7bfs3whjaw" path="res://User/slot_container.tscn" id="4_u6r4n"]
[ext_resource type="Script" uid="uid://x2bed7mntqq5" path="res://Scripturi/grid_character.gd" id="6_gdp8x"]

[sub_resource type="FontFile" id="FontFile_gdp8x"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0

[sub_resource type="Theme" id="Theme_83bh1"]
default_font = SubResource("FontFile_gdp8x")
default_font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_viii8"]
bg_color = Color(0, 0, 0, 0.470588)

[sub_resource type="Theme" id="Theme_viii8"]
default_font_size = 25

[node name="CanvasLayer" type="CanvasLayer"]
layer = 3
script = ExtResource("1_kn8vx")

[node name="SaveLoadPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="SaveLoadPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.221
anchor_right = 0.832
anchor_bottom = 0.87
offset_left = -0.424011
offset_top = -0.208008
offset_right = 0.536011
offset_bottom = 0.239929
grow_horizontal = 2
grow_vertical = 2

[node name="Save_list" type="VBoxContainer" parent="SaveLoadPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateNew" type="Button" parent="SaveLoadPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.922
anchor_right = 0.023
anchor_bottom = 0.922
offset_left = 27.0
offset_top = -26.4561
offset_right = 99.504
offset_bottom = 4.54395
theme_override_font_sizes/font_size = 32
text = "Create New"

[node name="Load" type="Button" parent="SaveLoadPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.939
anchor_top = 0.5
anchor_right = 0.939
anchor_bottom = 0.5
offset_left = -82.728
offset_top = -33.0
offset_right = 0.271973
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Load
"

[node name="SaveSelected" type="Panel" parent="SaveLoadPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -45.0
offset_right = -22.0
offset_bottom = 48.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SaveLoadPanel/SaveSelected"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overwrite" type="Button" parent="SaveLoadPanel/SaveSelected/VBoxContainer"]
layout_mode = 2
text = "Overwrite
"

[node name="Delete" type="Button" parent="SaveLoadPanel/SaveSelected/VBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.026
anchor_right = 0.452
anchor_bottom = 0.968
offset_left = -1.912
offset_top = 0.152
offset_right = 0.295959
offset_bottom = -0.264038
texture = ExtResource("2_uuvnn")
expand_mode = 1
stretch_mode = 6

[node name="Option" type="VBoxContainer" parent="." groups=["option"]]
anchors_preset = -1
anchor_left = 0.228
anchor_top = 0.498
anchor_right = 0.228
anchor_bottom = 0.498
offset_left = -257.656
offset_top = -303.704
offset_right = 258.344
offset_bottom = 306.296
grow_horizontal = 2
grow_vertical = 2

[node name="Save" type="Button" parent="Option"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Save
"

[node name="Load" type="Button" parent="Option"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Load"

[node name="Add" type="Button" parent="Option"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "ADD"

[node name="VBoxContainer" type="VBoxContainer" parent="Option"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Option/VBoxContainer" groups=["player_image"]]
custom_minimum_size = Vector2(500, 350)
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="RichTextLabel" type="RichTextLabel" parent="Option/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_83bh1")
theme_override_styles/normal = SubResource("StyleBoxFlat_viii8")
bbcode_enabled = true
text = "[center]Sun_Smile_(╯‵□′)╯︵┻━┻"
fit_content = true

[node name="Buttons" type="HBoxContainer" parent="Option"]
layout_mode = 2

[node name="Skills" type="Button" parent="Option/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Skills"
clip_text = true

[node name="Inventory" type="Button" parent="Option/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Inventory"
clip_text = true

[node name="Button3" type="Button" parent="Option/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Button4" type="Button" parent="Option/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Settings" type="Button" parent="Option/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Settings"
clip_text = true

[node name="info" type="Panel" parent="." groups=["option"]]
anchors_preset = -1
anchor_left = 0.459
anchor_top = 0.026
anchor_right = 0.99
anchor_bottom = 0.628
offset_left = 0.231995
offset_top = 0.152
offset_right = 0.52002
offset_bottom = 0.0559998
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="info"]
custom_minimum_size = Vector2(600, 340)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.114
anchor_right = 0.026
anchor_bottom = 0.114
offset_left = -0.144834
offset_top = -0.126598
offset_right = 599.855
offset_bottom = 339.873
scale = Vector2(0.659899, 0.786311)
mouse_filter = 0
horizontal_scroll_mode = 3
vertical_scroll_mode = 0
script = ExtResource("3_ohrbk")

[node name="Rail" type="HBoxContainer" parent="info/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 0
theme_override_constants/separation = -1

[node name="Control" parent="info/ScrollContainer/Rail" instance=ExtResource("4_ohrbk")]
layout_mode = 2

[node name="Control2" parent="info/ScrollContainer/Rail" instance=ExtResource("4_ohrbk")]
layout_mode = 2

[node name="Control3" parent="info/ScrollContainer/Rail" instance=ExtResource("4_ohrbk")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="info"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -0.223938
offset_bottom = -2.99994
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Stats" type="RichTextLabel" parent="info/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_viii8")
bbcode_enabled = true
text = "[center]Stats-uri"
fit_content = true

[node name="GridContainer" type="GridContainer" parent="info"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.809
anchor_right = 0.992
anchor_bottom = 0.984
offset_left = 7.0
offset_top = -0.15097
offset_right = -0.103882
offset_bottom = 0.0240479
columns = 4

[node name="SlotContainer" parent="info/GridContainer" instance=ExtResource("4_u6r4n")]
layout_mode = 2

[node name="TextureRect2" parent="info/GridContainer/SlotContainer/TextureHolder" index="0"]
texture = null

[node name="SlotContainer2" parent="info/GridContainer" instance=ExtResource("4_u6r4n")]
layout_mode = 2

[node name="TextureRect2" parent="info/GridContainer/SlotContainer2/TextureHolder" index="0"]
texture = null

[node name="SlotContainer3" parent="info/GridContainer" instance=ExtResource("4_u6r4n")]
layout_mode = 2

[node name="TextureRect2" parent="info/GridContainer/SlotContainer3/TextureHolder" index="0"]
texture = null

[node name="SlotContainer4" parent="info/GridContainer" instance=ExtResource("4_u6r4n")]
layout_mode = 2

[node name="TextureRect2" parent="info/GridContainer/SlotContainer4/TextureHolder" index="0"]
texture = null

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(400, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpeg")

[node name="SkillTree" parent="." instance=ExtResource("4_op81h")]
visible = false

[node name="Grid_character" type="GridContainer" parent="."]
z_index = -1
anchors_preset = -1
anchor_left = 0.227
anchor_top = 0.098
anchor_right = 0.227
anchor_bottom = 0.098
offset_left = -256.504
offset_top = -63.504
offset_right = 259.496
offset_bottom = 63.496
columns = 4
script = ExtResource("6_gdp8x")

[node name="SlotContainer" parent="Grid_character" instance=ExtResource("4_u6r4n")]
layout_mode = 2
slot_type = "helmet"

[node name="TextureRect2" parent="Grid_character/SlotContainer/TextureHolder" index="0"]
offset_right = 126.0
offset_bottom = 131.0
expand_mode = 0

[node name="SlotContainer2" parent="Grid_character" instance=ExtResource("4_u6r4n")]
layout_mode = 2
slot_type = "armor"

[node name="TextureRect2" parent="Grid_character/SlotContainer2/TextureHolder" index="0"]
offset_right = 126.0
offset_bottom = 131.0

[node name="SlotContainer3" parent="Grid_character" instance=ExtResource("4_u6r4n")]
layout_mode = 2
slot_type = "arma"

[node name="TextureRect2" parent="Grid_character/SlotContainer3/TextureHolder" index="0"]
offset_right = 126.0
offset_bottom = 131.0

[node name="SlotContainer4" parent="Grid_character" instance=ExtResource("4_u6r4n")]
layout_mode = 2
slot_type = "ceva"

[node name="TextureRect2" parent="Grid_character/SlotContainer4/TextureHolder" index="0"]
offset_right = 126.0
offset_bottom = 131.0

[connection signal="pressed" from="SaveLoadPanel/CreateNew" to="." method="_on_create_new_pressed"]
[connection signal="pressed" from="SaveLoadPanel/Load" to="." method="_on_load_resource_pressed"]
[connection signal="pressed" from="SaveLoadPanel/SaveSelected/VBoxContainer/Overwrite" to="." method="_on_overwrite_pressed"]
[connection signal="pressed" from="SaveLoadPanel/SaveSelected/VBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Option/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Option/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Option/Add" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Option/Buttons/Skills" to="." method="_on_skills_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]

[editable path="info/GridContainer/SlotContainer"]
[editable path="info/GridContainer/SlotContainer2"]
[editable path="info/GridContainer/SlotContainer3"]
[editable path="info/GridContainer/SlotContainer4"]
[editable path="Grid_character/SlotContainer"]
[editable path="Grid_character/SlotContainer2"]
[editable path="Grid_character/SlotContainer3"]
[editable path="Grid_character/SlotContainer4"]
